# lgl-emoji-picker

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  release_description.md  resources.qrc
packaging/: lgl-emoji-picker.desktop  lgl-emoji-picker.metainfo.xml  lgl-emoji-picker.spec
src/: emojidata.h  emojipicker.cpp  emojipicker.h  main.cpp  recentemojis.cpp  recentemojis.h
